@@ -11,7 +11,7 @@
 
 	<!-- set default dictionary type -->
 	<!-- to change the dictionary type to naist-chasen, ant -Ddictype=naist-chasen -->
-	<property name="dictype" value="ipadic"/>
+  <property name="dictype" value="ipadic"/>
   <property file="${dictype}.properties"/>
 
   <!-- Configures a web proxy if the property "proxy.host" is defined -->
@@ -64,9 +64,16 @@
   </target>
 
   <!-- Deletes dictionary and compiled files -->
-  <target name="clean">
+  <target name="clean" description="delete all dictionaries.">
     <delete dir="ipadic"/>
     <delete dir="naist-chasen"/>
+  </target>
+
+  <!-- Deletes compiled dictionary -->
+  <target name="clean-sen" description="delete compiled *.sen files. you may want to do this before compiling custom dictionaries.">
+    <delete>
+      <fileset dir="${dictype}" includes="*.sen"/>
+    </delete>
   </target>
 
   <!-- Preprocesses the dictionary for compilation -->
@@ -94,7 +101,8 @@
 	     by -Dcustom.dics=/abs/path/to/dic1.csv
 	     If you have two or more custom dictionaries, specify
 	     -Dcustom.dics="/abs/path/to/dic1.csv /abs/path/to/dic2.csv ..." -->
-	<target name="compile" depends="preprocess,reset-custom-dics" unless="dics.complete">
+  <target name="compile" depends="preprocess,reset-custom-dics" unless="dics.complete"
+          description="compile dictionaries">
     <java classname="net.java.sen.tools.DictionaryCompiler"
           fork="true" dir="${dictype}">
       <classpath>
